--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "@geschaft/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "nx run-many --target=serve -all"
+  },
   "private": true,
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.21.2"
+    "@prisma/client": "^6.17.0",
+    "express": "^4.21.2",
+    "mongodb": "5.5",
+    "prisma": "^6.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -14,30 +18,49 @@
     "@nx/esbuild": "21.6.3",
     "@nx/eslint": "21.6.3",
     "@nx/eslint-plugin": "21.6.3",
+    "@nx/express": "^21.6.3",
     "@nx/jest": "21.6.3",
     "@nx/js": "21.6.3",
     "@nx/node": "21.6.3",
+    "@nx/web": "21.6.3",
+    "@nx/webpack": "21.6.3",
     "@nx/workspace": "21.6.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.38",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/express-http-proxy": "^1.6.7",
     "@types/jest": "^30.0.0",
+    "@types/morgan": "^1.9.10",
     "@types/node": "20.19.9",
+    "@types/swagger-ui-express": "^4.1.8",
+    "axios": "^1.12.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "express-http-proxy": "^2.1.2",
+    "express-rate-limit": "^8.1.0",
     "jest": "^30.0.2",
     "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
+    "morgan": "^1.10.1",
     "nx": "21.6.3",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
+    "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
-    "typescript-eslint": "^8.40.0"
+    "typescript-eslint": "^8.40.0",
+    "webpack-cli": "^5.1.4"
   },
   "workspaces": [
     "apps/*"
