--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "composite": true,
     "declarationMap": true,
     "emitDeclarationOnly": true,
@@ -16,6 +17,10 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2022",
-    "customConditions": ["@geschaft/source"]
+    "customConditions": ["@geschaft/source"],
+    "paths": {
+      "@geschaft/handler": ["packages/handler/index.ts"],
+      "@geschaft/handler/*": ["packages/handler/*"]
+    }
   }
 }
