--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "private": true,
   "dependencies": {
     "@prisma/client": "^6.17.0",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "ioredis": "^5.8.1",
     "mongodb": "5.5",
     "prisma": "^6.17.0"
   },
@@ -33,15 +35,18 @@
     "@swc/jest": "~0.2.38",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/express-http-proxy": "^1.6.7",
     "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "20.19.9",
+    "@types/nodemailer": "^7.0.2",
     "@types/swagger-ui-express": "^4.1.8",
     "axios": "^1.12.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "ejs": "^3.1.10",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
@@ -51,6 +56,7 @@
     "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.9",
     "nx": "21.6.3",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
