--- a/apps/auth/tsconfig.app.json
+++ b/apps/auth/tsconfig.app.json
@@ -1,10 +1,10 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "types": ["node"],
+    "outDir": "out-tsc/auth",
+    "types": ["node", "express"],
     "rootDir": "../../",
-    "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
+    "tsBuildInfoFile": "out-tsc/auth/tsconfig.app.tsbuildinfo"
   },
   "include": ["src/**/*.ts", "../../packages/**/*.ts"],
   "exclude": [
