--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nx run-many --target=serve -all"
+    "dev": "nx run-many --target=serve -all",
+    "auth-doc": "node apps/auth/src/swagger.js"
   },
   "private": true,
   "dependencies": {
-    "@prisma/client": "^6.17.0",
+    "@prisma/client": "^6.17.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "ioredis": "^5.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "5.5",
-    "prisma": "^6.17.0"
+    "swagger-autogen": "^2.23.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -59,6 +62,7 @@
     "nodemailer": "^7.0.9",
     "nx": "21.6.3",
     "prettier": "^2.6.2",
+    "prisma": "^6.17.1",
     "react-refresh": "^0.10.0",
     "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.4.0",
